--- a/pom.xml
+++ b/pom.xml
@@ -50,14 +50,9 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
-                <executions>
-                    <execution>
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>it.torvergata.ispw.Main</mainClass>
-                        </configuration>
-                    </execution>
-                </executions>
+                <configuration>
+                    <mainClass>it.torvergata.ispw.realfinalproject.Main</mainClass>
+                </configuration>
             </plugin>
 
             <!-- Exec Maven Plugin (alternativa per eseguire l'app) -->
@@ -66,7 +61,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>it.torvergata.ispw.Main</mainClass>
+                    <mainClass>it.torvergata.ispw.realfinalproject.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
