--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>it.torvergata.ispw.realfinalproject.Main</mainClass>
+                    <mainClass>org.ispw.eventi.Main</mainClass>
                 </configuration>
             </plugin>
 
@@ -61,7 +61,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>it.torvergata.ispw.realfinalproject.Main</mainClass>
+                    <mainClass>org.ispw.eventi.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
